--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,5 +78,6 @@
         "unordered_set": "cpp",
         "utility": "cpp",
         "vector": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": true
 }
