--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,10 @@
         "unordered_map": "cpp",
         "unordered_set": "cpp",
         "utility": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "*.tcc": "cpp",
+        "clocale": "cpp",
+        "memory_resource": "cpp",
+        "shared_mutex": "cpp"
     }
 }
